--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="wrapper">
         <div class="home">
 		
-	<i><a href="https://peterpalluth.com/">Se mit portfolie - billedkunst -></a></i>
+	<i><a href="https://peterpalluth.com/" target="_blank">Se mit portfolie - billedkunst -></a></i>
 	
 	<h3>Blog:</h3>
 	
