--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <h3>Projekter:</h3>
 	<ul>
 		<li><a class="blue-highlight" href="http://ingerogjohannesexner.dk/" target="_blank">Inger og Johannes Exner</a><br>VERSION 2 (2026): <br>Et samlet portfolie for arkitekterne - lavet i samarbejde med Karen Exner. Har flyttet indholdet fra en Ruby on Rails version, jeg byggede tilbage i 2018, til en simpel Wordpress version. Med Glightbox og SplideJS integreringer. Kommer måske et blogindlæg om indholdet og udfordringerne.</li><br>
-		<li><a class="blue-highlight" href="https:mikrofest.dk" target="_blank">Mikrofest</a><br>Store bøger fra små forlag. En online boghandel for mikroforlag, så de får deres egen hjemmeside, hvor de hver især kan udtrykke deres unikke og fantastiske udvalg. Åbner snart i april 2020.</li><br>
+		<li><a class="blue-highlight" href="https://mikrofest.dk" target="_blank">Mikrofest</a><br>Store bøger fra små forlag. En online boghandel for mikroforlag, så de får deres egen hjemmeside, hvor de hver især kan udtrykke deres unikke og fantastiske udvalg. Åbner snart i april 2020.</li><br>
 		<li><a class="blue-highlight" href="https://europarefugiet.dk/" target="_blank">Europarefugiet</a><br>Simpel og smuk hjemmeside, synes jeg. Lavede også stregtegningerne. Bygget i Wordpress og tager ikke lang tid at lave i den nye Gutenberg Block editer heller.</li>
 		<br>
 	</ul>
