--- a/index.html
+++ b/index.html
@@ -36,7 +36,21 @@
         <div class="home">
 		
 	<i><a href="https://peterpalluth.com/" target="_blank">Se mit portfolie - billedkunst -></a></i>
+
 	
+  <hr><br><br>
+</p>
+<h3>Projekter:</h3>
+	<ul>
+		<li><a class="blue-highlight" href="http://ingerogjohannesexner.dk/" target="_blank">Inger og Johannes Exner</a><br>VERSION 2 (2026): <br>Et samlet portfolie for arkitekterne - lavet i samarbejde med Karen Exner. Har flyttet indholdet fra en Ruby on Rails version, jeg byggede tilbage i 2018, til en simpel Wordpress version. Med Glightbox og SplideJS integreringer. Kommer måske et blogindlæg om indholdet og udfordringerne.</li><br>
+		<li><a class="blue-highlight" href="https://sisterjohnny.org/" target="_blank">SisterJohnny</a><br>Lavet i plain html, css og javascript. Frihånd. Tung.</li>
+		<li><a class="blue-highlight" href="https://mikrofest.dk" target="_blank">Mikrofest</a><br>Store bøger fra små forlag. En online boghandel for mikroforlag, så de får deres egen hjemmeside, hvor de hver især kan udtrykke deres unikke og fantastiske udvalg. Åbner snart i april 2020.</li><br>
+		<li><a class="blue-highlight" href="https://europarefugiet.dk/" target="_blank">Europarefugiet</a><br>Simpel og smuk hjemmeside, synes jeg. Lavede også stregtegningerne. Bygget i Wordpress og tager ikke lang tid at lave i den nye Gutenberg Block editer heller.</li>
+		<li><a class="blue-highlight" href="https://gipsen.dk" target="_blank">Gipsen.dk</a><br>Frivilligt arbejde for Afstøbningssamlingens Venner, der kæmper for at beholde Den Kongelige Afstøbningssamling på den eftertragtede adresse i pakhuset i København. Læs mere om deres sag! Meget spændende.</li>
+		<br>
+	</ul>
+
+				
 	<h3>Blog:</h3>
 	
 		<ul>
@@ -85,16 +99,6 @@
         
 			
 		</ul>
-	
-  <hr><br><br>
-</p>
-<h3>Projekter:</h3>
-	<ul>
-		<li><a class="blue-highlight" href="http://ingerogjohannesexner.dk/" target="_blank">Inger og Johannes Exner</a><br>VERSION 2 (2026): <br>Et samlet portfolie for arkitekterne - lavet i samarbejde med Karen Exner. Har flyttet indholdet fra en Ruby on Rails version, jeg byggede tilbage i 2018, til en simpel Wordpress version. Med Glightbox og SplideJS integreringer. Kommer måske et blogindlæg om indholdet og udfordringerne.</li><br>
-		<li><a class="blue-highlight" href="https://mikrofest.dk" target="_blank">Mikrofest</a><br>Store bøger fra små forlag. En online boghandel for mikroforlag, så de får deres egen hjemmeside, hvor de hver især kan udtrykke deres unikke og fantastiske udvalg. Åbner snart i april 2020.</li><br>
-		<li><a class="blue-highlight" href="https://europarefugiet.dk/" target="_blank">Europarefugiet</a><br>Simpel og smuk hjemmeside, synes jeg. Lavede også stregtegningerne. Bygget i Wordpress og tager ikke lang tid at lave i den nye Gutenberg Block editer heller.</li>
-		<br>
-	</ul>
 			<p>OBS: Jeg arbejder gerne frivilligt, hvis projektet er aktivistisk eller kunstnerisk og jeg støtter det og har tid.</p>
 
 
